<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>

    <item
        android:id="@+id/about"
        android:icon="@drawable/about_icon"
        android:title="@string/about"/>
    <item
        android:id="@+id/portfolio"
        android:icon="@drawable/portfolio_icon"
        android:title="@string/portfolio"/>

    <item
        android:id="@+id/contact_us"
        android:icon="@drawable/contact_us_icon"
        android:title="@string/contact_us"/>

    <item android:id="@+id/dark_switch"
        android:icon="@drawable/dark_mode"
        app:actionLayout="@layout/switch_menu"
        android:title="@string/dark_mode"
        />

    <group
        android:id="@+id/menu_top">
        <item
            android:id="@+id/share"
            android:icon="@drawable/share_icon"
            android:title="@string/share"/>
        <item
            android:id="@+id/rate"
            android:icon="@drawable/rate_icon"
            android:title="@string/rate"/>

        <item android:id="@+id/logout"
            android:icon="@drawable/log_out"
            android:title="@string/log_out"
            />
    </group>



</menu>